Added pagination code, documentation and tests
